--- a/order/index.html
+++ b/order/index.html
@@ -7,290 +7,194 @@
   <meta name="description" content="Order food online from Stone Grill Restaurant.">
   <link rel="stylesheet" href="style.css">
   <style>
-    .selectable-item {border:1px solid #ccc;padding:10px;margin-bottom:8px;border-radius:6px;cursor:pointer;transition:background 0.15s;}
-    .selectable-item.selected {background:#b22222;color:#fff;font-weight:bold;}
-    #cartItems {border:1px solid #bbb;padding:10px;border-radius:8px;margin-top:10px;}
-    .cart-row {display:flex;justify-content:space-between;align-items:center;margin-bottom:6px;}
-    .cart-row .delete-btn {padding:2px 7px;color:#fff;background:#b22222;border:none;border-radius:3px;}
-    .cart-total {font-weight:bold; margin-top:8px;}
-    .hidden {display:none;}
-    .error {border: 2px solid red; background-color: #ffe6e6;}
+    body { font-family: Arial, sans-serif; background: #fff; color: #222; margin: 0; padding: 20px; }
+    .container { max-width: 700px; margin: 0 auto; padding: 20px; border: 1px solid #ddd; border-radius: 8px; background: #fefefe; }
+    h1, h3 { color: #b22222; }
+    label { display: block; margin-top: 10px; font-weight: bold; }
+    input, select, textarea { width: 100%; padding: 8px; margin-top: 4px; border-radius: 4px; border: 1px solid #ccc; }
+    textarea { resize: vertical; }
+    button { background: #b22222; color: #fff; padding: 10px 15px; border: none; border-radius: 4px; cursor: pointer; }
+    button:hover { background: #951a1a; }
+
+    .section-box { background: #fff; border: 1px solid #ccc; padding: 15px; margin-top: 20px; border-radius: 6px; }
+    .cart-row { display: flex; justify-content: space-between; align-items: center; padding: 6px 0; border-bottom: 1px solid #eee; }
+    .cart-left { display: flex; align-items: center; gap: 10px; }
+    .delete-btn { background: #b22222; color: white; border: none; border-radius: 4px; padding: 2px 6px; cursor: pointer; }
+    .cart-total { text-align: right; font-weight: bold; margin-top: 10px; }
+    .hidden { display: none; }
+    .error { border-color: red; }
   </style>
 </head>
 <body>
-  <div class="container">
-    <h1 style="text-align:center;">Stone Grill Order Form</h1>
-    <form id="fullOrderForm">
+<div class="container">
+  <h1>Stone Grill Order Form</h1>
+
+  <div class="section-box">
+    <form id="orderForm">
       <label for="name">Full Name:</label>
-      <input type="text" id="name" name="name" required>
+      <input type="text" id="name" required>
 
       <label for="mobile">Mobile Number:</label>
-      <input type="tel" id="mobile" name="mobile" required>
+      <input type="tel" id="mobile" placeholder="e.g. +639171234567" required>
 
       <label for="orderType">Order Type:</label>
-      <select id="orderType" name="orderType" onchange="togglePersons()" required>
+      <select id="orderType" required onchange="togglePersons()">
         <option value="">-- Select --</option>
         <option value="Dine-in">Dine-in</option>
         <option value="Take-out">Take-out</option>
       </select>
 
-      <div id="personCount" style="display:none;">
+      <div id="personSection" style="display:none">
         <label for="persons">Number of Persons:</label>
-        <input type="number" id="persons" name="persons" min="1">
+        <input type="number" id="persons" min="1">
       </div>
 
-      <label for="datetime">DATE:     TIME:</label>
-      <input type="datetime-local" id="datetime" name="datetime" required>
-
-      <label for="category">Select MENU:</label>
-      <select id="category" onchange="updateItems()" required>
-        <option value="">-- CHOOSE MENU --</option>
-        <option value="pork">PORK</option>
-        <option value="chicken">CHICKEN</option>
-        <option value="vegetable">VEGETABLES</option>
-        <option value="noodles">NOODLES</option>
-        <option value="rice">RICE</option>
-        <option value="beef">BEEF</option>
-        <option value="fish">FISH</option>
-      </select>
-
-      <div id="itemSelection" style="margin-top: 20px;"></div>
-      <button type="button" id="addSelectedBtn" style="margin-bottom:10px;">Add Selected</button>
-
-      <h3>Ordered Items:</h3>
-      <div id="cartItems"></div>
-      <div class="cart-total">Total: ₱<span id="dropdownTotal">0</span></div>
+      <label for="datetime">Date & Time:</label>
+      <input type="datetime-local" id="datetime" required>
 
       <label for="requests">Special Requests:</label>
-      <textarea id="requests" name="requests" rows="3" style="width:100%;"></textarea>
-
-      <button type="submit" style="margin-top: 10px;">Submit Order</button>
+      <textarea id="requests" rows="3"></textarea>
     </form>
-
-    <div id="orderSummary" class="hidden">
-      <div id="summaryText"></div>
-      <div style="margin-top: 30px;">
-        <a href="/" style="color:#b22222;text-decoration:underline;font-weight:bold;">Back to Stone Grill Homepage</a>
-      </div>
-    </div>
   </div>
 
-  <script>
-    function formatMobile(mobile) {
-      mobile = mobile.replace(/\s|-/g, '');
-      if (/^09\d{9}$/.test(mobile)) {
-        return '+63' + mobile.substring(1);
-      }
-      if (/^\+639\d{9}$/.test(mobile)) {
-        return mobile;
-      }
-      return null;
-    }
+  <div class="section-box">
+    <label for="category">Select Menu Category:</label>
+    <select id="category" onchange="renderMenu()">
+      <option value="">-- Choose --</option>
+      <option value="pork">Pork</option>
+      <option value="chicken">Chicken</option>
+      <option value="vegetable">Vegetables</option>
+    </select>
+    <div id="menuItems"></div>
+  </div>
 
-    const form = document.getElementById("fullOrderForm");
-    const cartItemsDiv = document.getElementById("cartItems");
-    let cart = [];
-    let selectedItems = [];
+  <div class="section-box">
+    <h3>Ordered Items:</h3>
+    <div id="cart"></div>
+    <div class="cart-total">Total: ₱<span id="total">0</span></div>
+    <button onclick="submitOrder()">Submit Order</button>
+  </div>
 
-    function togglePersons() {
-      const orderType = document.getElementById("orderType").value;
-      document.getElementById("personCount").style.display = (orderType === "Dine-in") ? "block" : "none";
-    }
+  <div id="confirmation" class="hidden section-box"></div>
+</div>
 
-    function updateItems() {
-      const category = document.getElementById("category").value;
-      const itemDiv = document.getElementById("itemSelection");
-      itemDiv.innerHTML = "";
-      selectedItems = [];
-      if (menuItems[category]) {
-        menuItems[category].forEach((item, index) => {
-          const row = document.createElement("div");
-          row.className = "selectable-item";
-          row.innerHTML = `<span>${item.name} (₱${item.price})</span>`;
-          row.onclick = () => toggleHighlight(row, category, index);
-          itemDiv.appendChild(row);
-        });
-      }
-    }
+<script>
+const menuData = {
+  pork: [{ name: "Pork Sisig", price: 199 }, { name: "Lechon Kawali", price: 229 }],
+  chicken: [{ name: "Fried Chicken", price: 179 }, { name: "Buffalo Wings", price: 189 }],
+  vegetable: [{ name: "Chopsuey", price: 159 }, { name: "Pinakbet", price: 149 }]
+};
 
-    function toggleHighlight(row, category, index) {
-      const key = category + '-' + index;
-      const selIndex = selectedItems.indexOf(key);
-      if (selIndex >= 0) {
-        selectedItems.splice(selIndex, 1);
-        row.classList.remove("selected");
-      } else {
-        selectedItems.push(key);
-        row.classList.add("selected");
-      }
-    }
+let cart = [];
 
-    document.getElementById("addSelectedBtn").onclick = () => {
-      selectedItems.forEach(key => {
-        const [cat, idx] = key.split('-');
-        const item = menuItems[cat][parseInt(idx)];
-        if (!cart.some(ci => ci.name === item.name)) {
-          cart.push({ ...item, qty: 1 });
-        }
-      });
-      selectedItems = [];
-      document.querySelectorAll('.selectable-item').forEach(row => row.classList.remove("selected"));
-      renderCart();
-    };
+function togglePersons() {
+  const val = document.getElementById("orderType").value;
+  document.getElementById("personSection").style.display = val === "Dine-in" ? "block" : "none";
+}
 
-    function removeFromCart(idx) {
-      cart.splice(idx, 1);
-      renderCart();
-    }
+function renderMenu() {
+  const category = document.getElementById("category").value;
+  const container = document.getElementById("menuItems");
+  container.innerHTML = "";
+  if (!menuData[category]) return;
 
-    function renderCart() {
-      cartItemsDiv.innerHTML = "";
-      let total = 0;
-      if (cart.length === 0) cartItemsDiv.innerHTML = "<em>No items yet.</em>";
-      else cart.forEach((item, idx) => {
-        total += item.qty * item.price;
-        const row = document.createElement("div");
-        row.className = "cart-row";
-        row.innerHTML = `
-          <button class="delete-btn" onclick="removeFromCart(${idx})">🗑️</button>
-          <span>${item.name} (₱${item.price})</span>
-        `;
-        cartItemsDiv.appendChild(row);
-      });
-      document.getElementById("dropdownTotal").textContent = total;
-    }
+  menuData[category].forEach((item, idx) => {
+    const btn = document.createElement("button");
+    btn.innerText = `${item.name} (₱${item.price})`;
+    btn.onclick = () => addToCart(item);
+    container.appendChild(btn);
+  });
+}
 
-    const menuItems = {
-      pork: [ { name: "Pork Sisig", price: 199 }, { name: "Lechon Kawali", price: 229 }, { name: "Pork BBQ (2 sticks)", price: 120 } ],
-      chicken: [ { name: "Fried Chicken", price: 179 }, { name: "Buffalo Wings", price: 189 }, { name: "Grilled Chicken", price: 199 } ],
-      vegetable: [ { name: "Chopsuey", price: 159 }, { name: "Pinakbet", price: 149 }, { name: "Ginataang Gulay", price: 169 } ],
-      noodles: [ { name: "Pancit Canton", price: 139 }, { name: "Bam-i", price: 149 }, { name: "Sotanghon Guisado", price: 139 } ],
-      rice: [ { name: "Cup Rice", price: 25 }, { name: "Platter Rice", price: 100 }, { name: "Stone Grill Fried Rice", price: 200 } ],
-      beef: [ { name: "Beef Steak", price: 300 }, { name: "Beef with Mushroom", price: 310 }, { name: "Beef Caldereta", price: 320 } ],
-      fish: [ { name: "Fried Tilapia", price: 199 }, { name: "Grilled Bangus", price: 219 }, { name: "Sweet & Sour Fish", price: 229 } ]
-    };
+function addToCart(item) {
+  const index = cart.findIndex(i => i.name === item.name);
+  if (index >= 0) cart[index].qty += 1;
+  else cart.push({ ...item, qty: 1 });
+  renderCart();
+}
 
-    form.addEventListener("submit", function(e) {
-      e.preventDefault();
-      const nameField = document.getElementById("name");
-      const mobileField = document.getElementById("mobile");
-      const mobileFormatted = formatMobile(mobileField.value);
+function removeItem(index) {
+  cart.splice(index, 1);
+  renderCart();
+}
 
-      nameField.classList.remove("error");
-      mobileField.classList.remove("error");
+function renderCart() {
+  const cartDiv = document.getElementById("cart");
+  cartDiv.innerHTML = "";
+  let total = 0;
+  cart.forEach((item, i) => {
+    total += item.qty * item.price;
+    const row = document.createElement("div");
+    row.className = "cart-row";
+    row.innerHTML = `
+      <div class="cart-left">
+        <button class="delete-btn" onclick="removeItem(${i})">🗑️</button>
+        <span>${item.qty} x ${item.name}</span>
+      </div>
+      <span>₱${item.price * item.qty}</span>
+    `;
+    cartDiv.appendChild(row);
+  });
+  document.getElementById("total").innerText = total;
+}
 
-      if (!nameField.value.trim()) {
-        nameField.classList.add("error");
-        alert("Please enter your name.");
-        return;
-      }
-      if (!mobileFormatted) {
-        mobileField.classList.add("error");
-        alert("Please enter a valid mobile number starting with 09 or +63.");
-        return;
-      }
-      if (cart.length === 0) {
-        alert("Please add at least one item to your order.");
-        return;
-      }
-
-      const data = {
-        name: nameField.value,
-        mobile: mobileFormatted,
-        orderType: document.getElementById("orderType").value,
-        persons: document.getElementById("persons").value || "",
-        datetime: document.getElementById("datetime").value,
-        requests: document.getElementById("requests").value,
-        cart: JSON.stringify(cart),
-        total: document.getElementById("dropdownTotal").textContent
-      };
-
-      fetch("https://script.google.com/macros/s/AKfycbyKlYNy78JDPvS_Dl65sHT24T5FE33XBWB-uo3rrafz3aCP5RuihGnJgeoq-NRc46iwsA/exec", {
-        method: "POST",
-        headers: { "Content-Type": "application/json" },
-        body: JSON.stringify(data)
-      })
-      .then(response => response.text())
-      .then(res => {
-        if (res.trim() === "OK") {
-          document.getElementById("fullOrderForm").style.display = "none";
-          let summary = "<h2>Thank you for your order!</h2><ul>";
-          cart.forEach(item => {
-            summary += `<li>${item.name} (₱${item.price}) x ${item.qty}</li>`;
-          });
-          summary += `</ul><strong>Total Amount:</strong> ₱${data.total}<br><br><div style='font-size:1.1em;color:#b22222;'>Your order has been submitted and our staff will process it after payment has been made.<br>Please feel free to explore our site while waiting.</div>`;
-          document.getElementById("orderSummary").classList.remove("hidden");
-          document.getElementById("summaryText").innerHTML = summary;
-        } else {
-          document.getElementById("summaryText").innerHTML = `<h2 style='color:#b22222'>Your order has not been sent.</h2><div>Sorry, please try again or contact our staff.</div>`;
-        }
-      })
-      .catch(() => {
-        document.getElementById("summaryText").innerHTML = `<h2 style='color:#b22222'>Your order has not been sent.</h2><div>There was a connection error. Please try again later.</div>`;
-      });
-    });
-
-    renderCart();
-    window.removeFromCart = removeFromCart;
-  </script>
-  <script>
-  // --- Real-time validation logic ---
-
-  function validateMobileFormat(value) {
-    if (value.startsWith("09")) return "+63" + value.slice(1);
-    return value;
-  }
-
-  function isValidMobile(value) {
-    return /^\+639\d{9}$/.test(value);
-  }
-
-  function markInvalid(field, isInvalid) {
-    if (isInvalid) {
-      field.style.border = "2px solid red";
-      field.style.backgroundColor = "#ffe5e5";
+function submitOrder() {
+  const requiredFields = ["name", "mobile", "orderType", "datetime"];
+  let valid = true;
+  requiredFields.forEach(id => {
+    const el = document.getElementById(id);
+    if (!el.value.trim()) {
+      el.classList.add("error");
+      valid = false;
     } else {
-      field.style.border = "";
-      field.style.backgroundColor = "";
+      el.classList.remove("error");
     }
+  });
+
+  const mobile = document.getElementById("mobile").value;
+  if (!mobile.startsWith("+63")) {
+    alert("Please use +63 format for mobile number.");
+    return;
   }
 
-  document.getElementById("mobile").addEventListener("input", function () {
-    let inputVal = this.value.trim();
-    if (inputVal.startsWith("09")) {
-      this.value = "+63" + inputVal.slice(1);
+  if (!valid || cart.length === 0) {
+    alert("Please complete all fields and select at least one item.");
+    return;
+  }
+
+  const data = {
+    name: document.getElementById("name").value,
+    mobile,
+    orderType: document.getElementById("orderType").value,
+    persons: document.getElementById("persons").value,
+    datetime: document.getElementById("datetime").value,
+    requests: document.getElementById("requests").value,
+    cart: cart,
+    total: document.getElementById("total").innerText
+  };
+
+  fetch("https://api.telegram.org/bot7538084446:AAEEBLr2U1YRhKhSyrN-HWf4mnPfjhtXgUqY/sendMessage", {
+    method: "POST",
+    headers: { "Content-Type": "application/json" },
+    body: JSON.stringify({
+      chat_id: "-1002531095369",
+      text: `New Order\nName: ${data.name}\nMobile: ${data.mobile}\nOrder Type: ${data.orderType}\nDateTime: ${data.datetime}\nRequests: ${data.requests}\nItems: ${JSON.stringify(data.cart)}\nTotal: ₱${data.total}`
+    })
+  })
+  .then(r => r.json())
+  .then(res => {
+    if (res.ok) {
+      document.getElementById("confirmation").classList.remove("hidden");
+      document.getElementById("confirmation").innerHTML = `<h3>Thank you! Your order has been sent.</h3>`;
+      document.getElementById("orderForm").reset();
+      cart = [];
+      renderCart();
+    } else {
+      document.getElementById("confirmation").classList.remove("hidden");
+      document.getElementById("confirmation").innerHTML = `<h3 style='color:red'>Failed to send order. Please try again.</h3>`;
     }
-    markInvalid(this, !isValidMobile(this.value));
   });
-
-  document.getElementById("name").addEventListener("input", function () {
-    markInvalid(this, this.value.trim() === "");
-  });
-
-  document.getElementById("orderType").addEventListener("change", function () {
-    markInvalid(this, this.value === "");
-  });
-
-  document.getElementById("fullOrderForm").addEventListener("submit", function (e) {
-    const name = document.getElementById("name");
-    const mobile = document.getElementById("mobile");
-    const orderType = document.getElementById("orderType");
-
-    const isNameEmpty = name.value.trim() === "";
-    const isMobileInvalid = !isValidMobile(mobile.value);
-    const isOrderTypeEmpty = orderType.value === "";
-    const isCartEmpty = cart.length === 0;
-
-    markInvalid(name, isNameEmpty);
-    markInvalid(mobile, isMobileInvalid);
-    markInvalid(orderType, isOrderTypeEmpty);
-
-    if (isNameEmpty || isMobileInvalid || isOrderTypeEmpty || isCartEmpty) {
-      alert("Please complete all required fields and add at least one item.");
-      e.preventDefault();
-      return;
-    }
-  });
+}
 </script>
 </body>
 </html>
